add accommodations page

--- a/resort-web-page.html
+++ b/resort-web-page.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Cancun Resort</h1>
-    <img>
+    <img src="img/cancun.jpg" alt="a picture of the resort">
     <ul>
       <li>Acommmodations</li>
       <li>Activities</li>
