add page for ativities

--- a/accommodations.html
+++ b/accommodations.html
@@ -9,5 +9,7 @@
     <p>Here is some pictures from our hotel rooms:</p>
     <img src="img/room.jpg" alt="A photo of a room">
     <img src="img/room1.jpg" alt="A photo of a room">
+
+  <p>Home Page</p>
   </body>
 </html>
