--- a/accommodations.html
+++ b/accommodations.html
@@ -10,6 +10,6 @@
     <img src="img/room.jpg" alt="A photo of a room">
     <img src="img/room1.jpg" alt="A photo of a room">
 
-  <p>Home Page</p>
+  <p><a href="file:///Users/Guest/Desktop/resort-webpage/resort-web-page.html">Home Page</a></p>
   </body>
 </html>
