--- a/activities.html
+++ b/activities.html
@@ -13,7 +13,7 @@
       <li>Jet Skies</li>
     </ul>
 
-  <p>Home Page</p>
+  <p><a href="file:///Users/Guest/Desktop/resort-webpage/resort-web-page.html">Home Page</a></p>
 
   </body>
 
