--- a/travel-arrangements.html
+++ b/travel-arrangements.html
@@ -13,6 +13,6 @@
       <li>Airfair discounts to our lical airport</li>
       <li>Voucher for shoping</li>
     </ul>
-    <p>Home Page</p>
+    <p><a href="file:///Users/Guest/Desktop/resort-webpage/resort-web-page.html">Home Page</a></p>
   </body>
 </html>
