--- a/resort-web-page.html
+++ b/resort-web-page.html
@@ -7,14 +7,14 @@
     <h1>Cancun Resort</h1>
     <img src="img/cancun.jpg" alt="a picture of the resort">
     <ul>
-      <li>Acommmodations</li>
-      <li>Activities</li>
-      <li>Travel Arrangements</li>
-      <li>Pictures</li>
-      <li>Contact Information</li>
+      <li><a href="file:///Users/Guest/Desktop/resort-webpage/accommodations.html">Acommmodations</a></li>
+      <li><a href="file:///Users/Guest/Desktop/resort-webpage/activities.html">Activities</a></li>
+      <li><a href="file:///Users/Guest/Desktop/resort-webpage/travel-arrangements.html">Travel Arrangements</a></li>
+      <li><a href="file:///Users/Guest/Desktop/resort-webpage/pictures.html">Pictures</a></li>
+      <li><a href="file:///Users/Guest/Desktop/resort-webpage/contact-information.html">Contact Information</a></li>
     </ul>
 
-   
+
 
   </body>
 </html>
