--- a/activities.html
+++ b/activities.html
@@ -14,7 +14,7 @@
       <li>Jet Skies</li>
     </ul>
 
-  <p><a href="file:///Users/Guest/Desktop/resort-webpage/resort-web-page.html">Home Page</a></p>
+<p><a href="index.html">Home Page</a></p>
 
   </body>
 
