--- a/contact-information.html
+++ b/contact-information.html
@@ -9,6 +9,6 @@
     <p>Address: Blvd. Kukulcan Km. 4,5, Kukulcan Boulevard, Zona Hotelera, 77500 Cancún, Q.R., Mexico</p>
     <p>phone nember: +90-971-243-1254</p>
     <p>email: occidental_cancun@gmail.com</p>
-    <p><a href="file:///Users/Guest/Desktop/resort-webpage/resort-web-page.html">Home Page</a></p>
+    <p><a href="index.html">Home Page</a></p>
   </body>
 </html>
