--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <h1>Cancun Resort</h1>
     <img src="img/cancun.jpg" alt="a picture of the resort">
     <ul>
-      <li><a href="file:///Users/Guest/Desktop/resort-webpage/accommodations.html">Acommmodations</a></li>
-      <li><a href="file:///Users/Guest/Desktop/resort-webpage/activities.html">Activities</a></li>
-      <li><a href="file:///Users/Guest/Desktop/resort-webpage/travel-arrangements.html">Travel Arrangements</a></li>
-      <li><a href="file:///Users/Guest/Desktop/resort-webpage/pictures.html">Pictures</a></li>
-      <li><a href="file:///Users/Guest/Desktop/resort-webpage/contact-information.html">Contact Information</a></li>
+      <li><a href="accommodations.html">Acommmodations</a></li>
+      <li><a href="activities.html">Activities</a></li>
+      <li><a href="travel-arrangements.html">Travel Arrangements</a></li>
+      <li><a href="pictures.html">Pictures</a></li>
+      <li><a href="contact-information.html">Contact Information</a></li>
     </ul>
 
 
