--- a/pictures.html
+++ b/pictures.html
@@ -10,7 +10,7 @@
     <img src="img/resort1.jpg" alt="A photo of the resort pool">
     <img src="img/Gym.jpg" alt="A photo of gym">
 
-  <p><a href="file:///Users/Guest/Desktop/resort-webpage/resort-web-page.html">Home Page</a></p>
+  <p><a href="index.html">Home Page</a></p>
   </body>
 
 </html>
